unpackaged/main/default/objects/loan__Repayment_Schedule_Summary__c/loan__Repayment_Schedule_Summary__c.object-meta.xml
<CustomObject>
    <label>Repayment Schedule</label>
    <nameField>
        <displayFormat>RSS-{0000000000}</displayFormat>
        <label>Repayment Schedule id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>