unpackaged/main/default/objects/loan__Repayment_Schedule_Summary__c/fields/loan__RSS_Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__RSS_Loan_Account__c</fullName>
    <label>Loan</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipName>Repayment_Schedule_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>