unpackaged/main/default/objects/loan__Repayment_Schedule_Summary__c/fields/loan__RSS_No_Of_Pmts__c.field-meta.xml
<CustomField>
    <fullName>loan__RSS_No_Of_Pmts__c</fullName>
    <label>Number Of Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>