unpackaged/main/default/objects/loan__Repayment_Schedule_Summary__c/fields/loan__RSS_Repayment_Amt__c.field-meta.xml
<CustomField>
    <fullName>loan__RSS_Repayment_Amt__c</fullName>
    <label>Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>