unpackaged/main/default/objects/loan__Repayment_Schedule_Summary__c/fields/loan__RSS_Repayment_Dt__c.field-meta.xml
<CustomField>
    <fullName>loan__RSS_Repayment_Dt__c</fullName>
    <label>Repayment Date</label>
    <type>Date</type>
</CustomField>